# Henvdall

./: .env.example  .gitignore  README.md  pyproject.toml
src/henvdall/: __init__.py  audit.py  logo.py  main.py  parser.py  sync.py  validator.py
tests/: __init__.py  test_parser.py  test_validator.py
