[tool.poetry]
name = "henvdall"
version = "0.1.0"
description = "A professional-grade CLI utility that acts as a gatekeeper for environment variables"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "henvdall", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.9.0"
rich = "^13.7.0"
pydantic = "^2.5.0"

[tool.poetry.scripts]
henvdall = "henvdall.main:app"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.12.0"
ruff = "^0.1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py38"
